Minor bug fix
Box misalignment in configure page has been resolved

--- a/Game/assets/css/style.css
+++ b/Game/assets/css/style.css
@@ -1439,6 +1439,7 @@ table{
   margin-left:5px;
   margin-top:17px;
   width: 100%;
+  border-spacing: 10px !important;
 }
 
 tr th{
@@ -1663,5 +1664,47 @@ button{
   height:50px;
   text-align:center;
   margin-left:350px;
+
+}
+
+#cfmcard{
+  border: none;
+  border-radius: 5px;
+  display:inline-block;
+  font-size:large;
+  font-family: "Poppins", sans-serif;
+  font-weight:900;
+  width: 100vw;
+  height: 5vw;
+  color:#ffffff;
+  background-color: #DC143C;
+  position:absolute;
+}
+
+#cfmbtn{
+  display:inline-block;
+  margin-left: 850px;
+  border: 2px solid#ffffff;
+  color: rgb(18, 161, 49);
+  border-radius: 50px;
+  padding: 8px 25px;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  font-size: 12px;
+  font-weight: bold;
+  background: #8ffca1;
+  width: 120px;
+  text-align: center;
+  height: 40px;
+  float:right;
+}
+
+#confirmation p{
+  padding-left: 35px;
+  padding-top:25px;
+  font-size:large;
 
 }
